tests/ui/impl-unused-rps-in-assoc-type.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-rps-in-assoc-type.rs:11:6
   |
LL | impl<'a> Fun for Holder {
   |      ^^ unconstrained lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
